--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
         <div class="eris-grid-wrapper">
             <aside class="eris-sidebar-stats">
                 <div class="eris-stat-block">
-                    <div class="eris-stat-number">39</div>
+                    <div class="eris-stat-number">10+</div>
                     <div class="eris-stat-label">Projects</div>
                 </div>
                 <div class="eris-stat-block">
@@ -1774,6 +1774,22 @@
             <div class="eris-arrow-btn">↗</div>
         </div>
         <p class="eris-card-tags">Designed an AI-powered tool that condenses lengthy articles into key points, featuring customizable summary length, readability scoring, and multi-language support.</p>
+    </article>
+
+      <!-- Project 7 -->
+    <article class="eris-portfolio-card">
+        <div class="eris-sketchy-border">
+            <span class="eris-border-v-left"></span>
+            <span class="eris-border-v-right"></span>
+        </div>
+
+        <div class="eris-card-image-box"><img src="todo website.png" class="project-image"></div>
+        
+        <div class="eris-card-header">
+            <h3 class="eris-card-title">REmindER Website</h3>
+            <div class="eris-arrow-btn">↗</div>
+        </div>
+        <p class="eris-card-tags">A straightforward task manager focused on core functionality - adding, editing, and deleting tasks with a clean, no-frills interface..</p>
     </article>
 </div>
     </section>
