--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@
         .eris-cta-button {
             background-color: var(--eris-accent-blue);
             color: var(--eris-black);
-            padding: 14px 28px;
+            /* changed the styling here */
+            padding: 14px 29px;
             border-radius: 50px;
             font-size: 1rem;
             font-weight: 700;
