--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,7 @@
     transition: all 0.3s;
     gap: 15px;
     margin-bottom: 40px;
+    cursor: pointer;
 }
 
 .eris-card-description {
@@ -1488,7 +1489,7 @@
         .eris-footer-socials {
             display: flex;
             gap: 15px;
-            font-size: 1.3rem;
+            font-size: 1.5rem;
         }
         
         .eris-social-link {
@@ -2043,8 +2044,8 @@
                     <div class="eris-stat-label">Projects</div>
                 </div>
                 <div class="eris-stat-block">
-                    <div class="eris-stat-number">100k+</div>
-                    <div class="eris-stat-label">generated</div>
+                    <div class="eris-stat-number">      2+</div>
+                    <div class="eris-stat-label">Years Learning and Building</div>
                 </div>
                 <div class="eris-stat-block" style="border-bottom:none;"></div>
             </aside>
@@ -2568,9 +2569,9 @@
             </div>
             
             <div class="eris-footer-socials">
-                <a href="#" class="eris-social-link"></a>
-                <a href="#" class="eris-social-link"></a>
-                <a href="#" class="eris-social-link"></a>
+                <a href="https://github.com/Erioluwa00" target="_blank" class="eris-social-link"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/erioluwa-amole-387405352/" target="_blank" class="eris-social-link"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://x.com/ErioluwaA23570" target="_blank" class="eris-social-link"><i class="fa-brands fa-twitter"></i></a>
             </div>
         </div>
     </footer>
