--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eris - Neu-Brutalism Portfolio</title>
+    <title>Erioluwa's Portfolio</title>
     <style>
         /* --- CSS VARIABLES & RESET --- */
         :root {
