--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         /* --- UTILITIES --- */
         .eris-highlight {
             background-color: var(--eris-accent-yellow);
-            padding: 0 px;
+            padding: 0 4px;
             display: inline-block;
             transform: skewX(-12deg);
         }
