--- a/index.html
+++ b/index.html
@@ -2169,8 +2169,8 @@
         <div class="eris-tech-stack">
             <span class="eris-tech-tag">HTML5</span>
             <span class="eris-tech-tag">CSS3</span>
-            <span class="eris-tech-tag">JavaScript</span>
-            <span class="eris-tech-tag">GSAP</span>
+            <span class="eris-tech-tag">ReactJs</span>
+            <span class="eris-tech-tag">NODEJS</span>
         </div>
         
         <div class="eris-key-features">
