--- a/index.html
+++ b/index.html
@@ -2176,8 +2176,8 @@
         <div class="eris-key-features">
             <h4>Key Features</h4>
             <ul>
-                <li>Interactive project galleries</li>
-                <li>Client testimonials section</li>
+                <li>Integrated AI summarizer</li>
+                <li>Audio key points extraction</li>
                 <li>Service portfolio showcase</li>
                 <li>Contact form with validation</li>
             </ul>
