--- a/index.html
+++ b/index.html
@@ -2178,7 +2178,7 @@
             <ul>
                 <li>Integrated AI summarizer</li>
                 <li>Audio key points extraction</li>
-                <li>Service portfolio showcase</li>
+                <li>Time-saving (seconds to summarize)</li>
                 <li>Contact form with validation</li>
             </ul>
         </div>
