--- a/index.html
+++ b/index.html
@@ -2183,11 +2183,11 @@
             </ul>
         </div>
         
-        <div class="eris-card-buttons">
-            <a href="#" class="eris-btn eris-btn-demo">
+           <div class="eris-card-buttons">
+            <a href="https://fur-ever-care2.vercel.app/" target="_blank" class="eris-btn eris-btn-demo">
                 <i class="fa-solid fa-play-circle"></i> Live Demo
             </a>
-            <a href="#" class="eris-btn eris-btn-code">
+            <a href="https://github.com/Erioluwa00/FurEver_Care" target="_blank" class="eris-btn eris-btn-code">
                 <i class="fa-solid fa-code"></i> View Code
             </a>
         </div>
