--- a/index.html
+++ b/index.html
@@ -2184,10 +2184,10 @@
         </div>
         
            <div class="eris-card-buttons">
-            <a href="https://fur-ever-care2.vercel.app/" target="_blank" class="eris-btn eris-btn-demo">
+            <a href="https://summaro.vercel.app/" target="_blank" class="eris-btn eris-btn-demo">
                 <i class="fa-solid fa-play-circle"></i> Live Demo
             </a>
-            <a href="https://github.com/Erioluwa00/FurEver_Care" target="_blank" class="eris-btn eris-btn-code">
+            <a href="https://github.com/Erioluwa00/Summaro" target="_blank" class="eris-btn eris-btn-code">
                 <i class="fa-solid fa-code"></i> View Code
             </a>
         </div>
@@ -2376,7 +2376,7 @@
 
 
 
-      <!-- Project 7 -->
+      <!-- Project 7
     <article class="eris-portfolio-card">
         <div class="eris-sketchy-border">
             <span class="eris-border-v-left"></span>
@@ -2416,7 +2416,7 @@
                 <i class="fa-solid fa-code"></i> View Code
             </a>
         </div>
-    </article>
+    </article> -->
 
 
 
