--- a/index.html
+++ b/index.html
@@ -2225,6 +2225,7 @@
                 <li>Filter out pet products</li>
                 <li>Check the health of your pet </li>
                 <li>Filter out various pets to adopt</li>
+                <li>Emergency hotlines and pet health tips </li>
             </ul>
         </div>
         
