--- a/index.html
+++ b/index.html
@@ -2185,7 +2185,7 @@
         </div>
         
            <div class="eris-card-buttons">
-            <a href="https://summaro.vercel.app/" target="_blank" class="eris-btn eris-btn-demo">
+            <a href="https://summaro.netlify.app/" target="_blank" class="eris-btn eris-btn-demo">
                 <i class="fa-solid fa-play-circle"></i> Live Demo
             </a>
             <a href="https://github.com/Erioluwa00/Summaro" target="_blank" class="eris-btn eris-btn-code">
